fix: spacing and alignment

--- a/admin/src/scss/layout/_forms.scss
+++ b/admin/src/scss/layout/_forms.scss
@@ -122,7 +122,7 @@ legend {
 }
 
 .form-select {
-	padding: $input-padding-y $input-padding-x;
+	padding: rem(8) $input-padding-x-sm;
 }
 
 #custom-switch {
